# rabbit_backend

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  report.xml
.gitlab/agents/cluster/: config.yaml
deploy/: Dockerfile  app.yml  db.yml  docker-compose.dev.yml  docker-compose.kube.yml  docker-compose.yml  namespace.yml
rabbit_backend/: __init__.py  __main__.py  conftest.py  containers.py  gunicorn_runner.py  logging.py  settings.py  utlis.py
rabbit_backend/db/: base.py  dependencies.py  exceptions.py  exeptions.py  utils.py
rabbit_backend/db/actions/: topic.py
rabbit_backend/db/dao/: __init__.py  topic_dao.py
rabbit_backend/db/migrations/: __init__.py  env.py
rabbit_backend/db/migrations/versions/: 2021-08-16-16-53_819cbf6e030b.py  2024-04-09-15-47_919c97dc10ac.py  2024-04-09-15-52_5e5bd973cfd0.py
rabbit_backend/db/models/: __init__.py  topics.py  users.py
rabbit_backend/quiz/: __init__.py  containers.py  entities.py
rabbit_backend/quiz/adapters/repository/: exceptions.py
rabbit_backend/quiz/adapters/repository/memory/: public_object_repository.py  question_repository.py  subject_repository.py  topic_repository.py
rabbit_backend/quiz/adapters/repository/protocols/: question_repository.py  subject_repository.py  topic_repository.py
rabbit_backend/quiz/interactors/: exceptions.py  public_object_base.py  questions.py  subjects.py  topics.py
rabbit_backend/quiz/interactors/dtos/: dto_base.py  question_dto.py  subject_dtos.py  topic_dtos.py
rabbit_backend/quiz/tests/: test_entities.py
rabbit_backend/quiz/tests/test_interactors/: conftest.py  dummies.py  test_questions.py  test_subjects.py  test_topics.py
rabbit_backend/services/: __init__.py
rabbit_backend/services/redis/: dependency.py  lifetime.py
rabbit_backend/tests/: __init__.py
rabbit_backend/tests/api/: __init__.py  test_topics.py
rabbit_backend/user/: __init__.py  containers.py  entities.py
rabbit_backend/user/repository/alchemy/: __init__.py
rabbit_backend/user/repository/memory/: user_repository.py
rabbit_backend/user/repository/protocols/: user_repository.py
rabbit_backend/web/: __init__.py  application.py  backend_exception_handler.py  lifetime.py  util.py
rabbit_backend/web/api/: __init__.py  router.py
rabbit_backend/web/api/monitoring/: __init__.py
rabbit_backend/web/api/topics/: __init__.py  schemas.py  views.py
rabbit_backend/web/api/users/: __init__.py  views.py
